add postBuild to build interactive plot extension

--- a/environment.yml
+++ b/environment.yml
@@ -24,7 +24,7 @@ dependencies:
 - pip
 # Specific to radis-lab : 
 - pyqt
-- ipympl
+- ipympl>=0.5.6  # for interactive plots
 - pip:
   - publib>=0.3.2  # Plotting styles for Matplotlib
   - hitran-api
