update plotly build

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -3,6 +3,7 @@ name: radis-env
 channels:
 - conda-forge
 - astropy
+- plotly
 dependencies:
 - python=3.6
 - numpy
@@ -13,7 +14,7 @@ dependencies:
 - h5py
 - numba
 - astropy  # Unit aware calculations
-- plotly>=2.5.1  # for line survey HTML output
+- plotly==4.14.1  # for line survey HTML output
 - termcolor  # terminal colors
 - configparser
 - astroquery>=0.3.9  # to fetch HITRAN databases
@@ -27,6 +28,7 @@ dependencies:
 - ipympl>=0.5.6  # for interactive plots
 - jupyterlab
 - ipywidgets>=7.5    # for plotly
+- python-kaleido     # for plotly
 - pip:
   - publib>=0.3.2  # Plotting styles for Matplotlib
   - hitran-api
