--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,4 @@ jobs:
       - uses: s-weigand/trigger-mybinder-build@v1
         with:
           target-repo: radis-lab/radis
+          target-state: main  
