--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -4,6 +4,7 @@ channels:
 - conda-forge
 - astropy
 - cantera
+- plotly
 dependencies:
 - python=3.8
 - astropy  # Unit aware calculations
@@ -45,6 +46,6 @@ dependencies:
   - tables  # for pandas to HDF5 export
   - habanero  # CrossRef API to retrieve data from doi
   # Specific to radis-lab:
-  - radis>=0.10.3
+  - radis>=0.11
   - jupyter-offlinenotebook
   - jupyterlab_hdf
